tests/specs/npm/cjs_internal_types_default_export/main.out
Check file:///[WILDLINE]/main.ts
TS2345 [ERROR]: Argument of type 'string' is not assignable to parameter of type 'number'.
add(1, "test"); // should error
       ~~~~~~
    at file:///[WILDLINE]/main.ts:3:8

error: Type checking failed.
