tests/specs/npm/cjs_internal_types_default_export/main.ts
import { add } from "@denotest/cjs-internal-types-default-export";

add(1, "test"); // should error
